* implemented oninput method for form elements for unsupported   browsers * fix IE9 to ensure backspace and delete keys fire an   oninput event.
Change-Id: Ie7ad580fc8c556bd5cac58df096b39a2549e30e3

--- a/tests/html5Widgets/index.html
+++ b/tests/html5Widgets/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8" />
         <title>HTML5 Widgets</title>
 		<link rel="stylesheet" href="../../shared/css/useragentmanExample.css" type="text/css" media="all" />
     </head>
@@ -21,7 +20,9 @@
 					<li><a href="placeholder.html"><code>placeholder</code> example</a></li>
 					<li><a href="range.html"><code>range</code> example</a></li>
 					<li><a href="datetime.html">the various <code>date</code> related widgets</a></li>
-					<li><a href="output.html"><code>output</code> tag example</a></li>
+					<li><a href="output.html"><code>output</code> tag with <code>onforminput</code> event</a></li>
+					<li><a href="outputWithOninput.html"><code>output</code> tag with <code>oninput</code> event</a></li>
+					<li><a href="outputWithBothOnforminputAndOninput.html"><code>output</code> tag with both <code>onforminput</code> and <code>oninput</code> events</a></li>
 					<li><a href="color.html"><code>color</code> example</a></li>
 					<li><a href="example.html">And now ... everything together.</a></li>
 				</ul>
