--- a/tests/html5Widgets/output.html
+++ b/tests/html5Widgets/output.html
@@ -2,7 +2,6 @@
 <html lang="en">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8" /> 
 		
 		<title>Example of the output tag.</title>
 		
@@ -28,7 +27,8 @@
 	</head>
 	<body id="myExample" class="html5Widgets-debug">
     	<div id="exampleBlurb">
-    		<p>The following is an example of using the HTML5 <code>output</code> tag to do
+    		<p>The following is an example of using the HTML5 <code>output</code> tag with the 
+			deprecated <code>onforminput</code> event to do
 			some calculations on the data within the form.  <a href="#">Back to the User Agent Man HTML5 Forms article</a>.</p>
     	</div>
 		
