Fixed links that weren't pointing anywhere in the examples.
Change-Id: I752049817426244dd546811f9edc56a6e1670819

--- a/tests/html5Widgets/color.html
+++ b/tests/html5Widgets/color.html
@@ -47,7 +47,7 @@
     	<div id="exampleBlurb">
     		<p>The following shows a variety of HTML5 form elements, including 
 			<code>color</code>.  
-			<a href="#">Back to the User Agent Man HTML5 Forms article</a>.</p>
+			<a href="http://www.useragentman.com/blog/?p=1110">Back to User Agent Man HTML5 Forms article.</a></p>
     	</div>
 		
         <form method="get" action="result.html"  >
