--- a/tests/html5Widgets/dateTime.html
+++ b/tests/html5Widgets/dateTime.html
@@ -62,7 +62,7 @@
 			Note that at the time of this writing, Opera is the only browser
 			that renders the calendars natively - all the other browsers
 			require <code>html5Widgets</code>.
-			<a href="#">Back to the User Agent Man HTML5 Forms article</a>.</p>
+			<a href="http://www.useragentman.com/blog/?p=1110">Back to User Agent Man HTML5 Forms article.</a></p>
     	</div>
 		
         <form method="get" action="result.html">
