--- a/tests/html5Widgets/output.html
+++ b/tests/html5Widgets/output.html
@@ -29,7 +29,7 @@
     	<div id="exampleBlurb">
     		<p>The following is an example of using the HTML5 <code>output</code> tag with the 
 			deprecated <code>onforminput</code> event to do
-			some calculations on the data within the form.  <a href="#">Back to the User Agent Man HTML5 Forms article</a>.</p>
+			some calculations on the data within the form.  <a href="http://www.useragentman.com/blog/?p=1110">Back to User Agent Man HTML5 Forms article.</a></p>
     	</div>
 		
         <form method="get" action="result.html"  >
