--- a/tests/html5Widgets/outputWithBothOnforminputAndOninput.html
+++ b/tests/html5Widgets/outputWithBothOnforminputAndOninput.html
@@ -29,7 +29,7 @@
     	<div id="exampleBlurb">
     		<p>The following is an example of using the HTML5 <code>output</code> tag with both 
 			an <code>onforminput</code> event added to it as well as a <code>oninput</code> tag added
-			to it's form.   <a href="#">Back to the User Agent Man HTML5 Forms article</a>.</p>
+			to it's form.   <a href="http://www.useragentman.com/blog/?p=3174">Back to the User Agent Man <code>oninput</code> article</a>.</p>
     	</div>
 		
         <form method="get" action="result.html" 
