--- a/tests/html5Widgets/outputWithOnInput.html
+++ b/tests/html5Widgets/outputWithOnInput.html
@@ -29,7 +29,7 @@
 	<body id="myExample" class="html5Widgets-debug">
     	<div id="exampleBlurb">
     		<p>The following is an example of using the HTML5 <code>output</code> tag with a form's <code>oninput</code> event to do
-			some calculations on the data within the form.  <a href="#">Back to the User Agent Man HTML5 Forms article</a>.</p>
+			some calculations on the data within the form.  It uses html5Widgets to fix IE9's slightly misbehaved implementation of <code>oninput</code>. <a href="http://www.useragentman.com/blog/?p=3174">Back to the User Agent Man <code>oninput</code> article</a>.</p>
     	</div>
 		
         <form method="get" action="result.html" 
