Added textarea placeholders.

--- a/tests/html5Widgets/placeholder.html
+++ b/tests/html5Widgets/placeholder.html
@@ -63,6 +63,14 @@
 				</tr>
 				
 				<tr>
+					<th>Notes :</th>
+					<td><textarea name="notes" placeholder="Please enter in some information to help us"></textarea>
+					<div class="description">If you are unemployed, please leave 
+					blank.</div>
+					</td>
+				</tr>
+				
+				<tr>
 					<th>Postal/Zip Code</th>
 					<td><input type="text" name="postalCode" value="" placeholder="Required information" required="required" 
 						pattern="^([A-Za-z]\d[A-Za-z])\ {0,1}(\d[A-Za-z]\d)$"
