Fixed script tags that were pointing to the wrong area.  Also fixed issue with IE not supporting navigator.language.

--- a/tests/html5Forms/index.html
+++ b/tests/html5Forms/index.html
@@ -38,14 +38,10 @@
                     <li>
                         <a href="bradshawenterprises.com/index.html">HTML5 Form Demo</a>
                         from <a href="http://www.bradshawenterprises.com/">Richard Bradshaw</a>'s 
-                        article <a href="http://www.bradshawenterprises.com/blog/2010/fancy-forms-html5-css3-js/">Fancy Forms: HTML5 + CSS3 – JS</a>
+                        article <a href="http://www.bradshawenterprises.com/blog/2010/fancy-forms-html5-css3-js/">Fancy Forms: HTML5 + CSS3 – JS</a>. 
+                        It is a good example of how to use CSS3 to show the validity state of the form element.
                     </li>
                     
-                    <li>
-                        <a href="dev.opera.com">Example</a> from  the article 
-						<a href="http://dev.opera.com/articles/view/improve-your-forms-using-html5/">Improve your forms using HTML5!</a>
-						from <a href="http://dev.opera.com">The Opera Developer Community Website</a>.
-                    </li>
                 </ul>
                 </ul>
 			 </fieldset>
