--- a/tests/html5Forms/miketaylr.com/index.html
+++ b/tests/html5Forms/miketaylr.com/index.html
@@ -20,11 +20,11 @@
   </style>
   
  		<!-- Needed for Forms Feature Detection -->
-		<script type="text/javascript" src="../../html5Forms/shared/js/modernizr.com/Modernizr-2.5.3.forms.js">
+		<script type="text/javascript" src="../../shared/js/modernizr.com/Modernizr-2.5.3.forms.js">
 		</script>
 		
 		<!-- Needed for Validation --> 
-		<script type="text/javascript" src="../../html5Forms/shared/js/html5Forms.js" data-webforms2-support="all">
+		<script type="text/javascript" src="../../shared/js/html5Forms.js" data-webforms2-support="all">
 		</script>
   
   
