- Fix css validation state bug in IE. - Fix layout of examples.

--- a/tests/html5Forms/patternRequired-styleError.html
+++ b/tests/html5Forms/patternRequired-styleError.html
@@ -64,7 +64,7 @@
 					<td><input type="text" name="postalCode" value="" required="required" 
 						pattern="(\d{5}([\-]\d{4})?)"
 					/>
-					<div class="description">Please enter a valid American postal code. 
+					<div class="description">Please enter a valid American zip code. 
 					Valid format is <strong>nnnnn</strong> or <strong>nnnnn-nnnn</strong>
 					where <strong>n</strong>
 					is a numeric digit.</div>
