--- a/tests/html5Forms/patternRequired.html
+++ b/tests/html5Forms/patternRequired.html
@@ -58,9 +58,9 @@
 				<tr>
 					<th>Zip Code</th>
 					<td><input type="text" name="postalCode" value="" required="required" 
-						pattern="(\d{5}([\-]\d{4})?)" data-errormessage="This must be a valid postal code."
+						pattern="(\d{5}([\-]\d{4})?)" data-errormessage="This must be a valid zip code."
 					/>
-					<div class="description">Please enter a valid American postal code. 
+					<div class="description">Please enter a valid American zip code. 
 					Valid format is <strong>nnnnn</strong> or <strong>nnnnn-nnnn</strong>
 					where <strong>n</strong>
 					is a numeric digit.</div>
