--- a/tests/html5Forms/index.html
+++ b/tests/html5Forms/index.html
@@ -22,6 +22,8 @@
 					<li><a href="datetime.html">the various <code>date</code> related widgets</a></li>
 						<li><a href="outputWithOninput.html"><code>output</code> tag with <code>oninput</code> event</a></li>
 					<li><a href="color.html"><code>color</code> example</a></li>
+					<li><a href="errorMessageStyling.html">Error message styling example.</a></li>
+					<li><a href="validityStyling.html">Styling of the validation state of a form field</a> (i.e. <code>:on_valid</code>, <code>:on_invalid</code>)</li>
 					<li><a href="example.html">And now ... everything together.</a></li>
 				</ul>
 				
