--- a/tests/html5Forms/range.html
+++ b/tests/html5Forms/range.html
@@ -34,7 +34,7 @@
 		
 		
 		<form oninput="document.getElementById('rangeOutput').innerHTML = 
-			'$' + document.getElementById('rangeEl').value">
+			'$' + document.getElementById('rangeEl').value" action="http://www.useragentman.com/testForm.php">
 			<fieldset>
 				<legend>Personal Information</legend>
 		
@@ -80,9 +80,9 @@
 				<tr>
 					<th>Zip Code</th>
 					<td><input type="text" name="postalCode" value="" required="required" 
-						pattern="(\d{5}([\-]\d{4})?)" data-errormessage="This must be a valid postal code."
+						pattern="(\d{5}([\-]\d{4})?)" data-errormessage="This must be a valid zip code."
 					/>
-					<div class="description">Please enter a valid American postal code. 
+					<div class="description">Please enter a valid American zip code. 
 					Valid format is <strong>nnnnn</strong> or <strong>nnnnn-nnnn</strong>
 					where <strong>n</strong>
 					is a numeric digit.</div>
