Fix messages at top of the examples.

--- a/tests/html5Forms/validityStyling.html
+++ b/tests/html5Forms/validityStyling.html
@@ -25,8 +25,8 @@
 	<body id="myExample">
 		<div id="exampleBlurb">
 		<p>
-				This is an example of a HTML5 form which has a different error message style for each of its form <elements class=""></elements>
-					<a href="http://www.useragentman.com/blog/?p=1110">Back to User Agent Man HTML5 Forms article </a>
+				This is an example of an HTML5 form where the form fields show the validity state as the user types in each field.
+					<a href="http://www.useragentman.com/blog/?p=4472">Back to User Agent Man HTML5 Forms article </a>
 			</p>
 		</div>
 		
