Fix IE styling bug with required radio buttons.

--- a/tests/html5Forms/errorMessageStyling.html
+++ b/tests/html5Forms/errorMessageStyling.html
@@ -80,7 +80,7 @@
 	<body id="myExample">
 		<div id="exampleBlurb">
 		<p>
-				This is an example of a HTML5 form which has a different error message style for each of its form <elements class=""></elements>
+				This is an example of a HTML5 form which has a different error message style for each of its form elements.
 					<a href="http://www.useragentman.com/blog/?p=4472">Back to User Agent Man HTML5 Forms article </a>
 			</p>
 		</div>
