1) Made reset button clear custom validation classes. 2) Added an data attribute for the html5Forms.js script tag, data-webforms2-force-js-date-picker, which, when set to "true" will force the js implementation of type="date".  This is to work around Chrome's current incomplete implementation of date fields (it doesn't support datetime, the display format is different to what is submitted, etc)

--- a/tests/html5Forms/dateTime.html
+++ b/tests/html5Forms/dateTime.html
@@ -34,8 +34,14 @@
     		<p>The following shows the various HTML5 date/time widgets in action.
 			Note that at the time of this writing, Opera and some Webkit browsers are the only browser
 			that renders the calendars natively - all the other browsers
-			require <code>html5Widgets</code>.
-			<a href="http://www.useragentman.com/blog/?p=1110">Back to User Agent Man HTML5 Forms article.</a></p>
+			require <code>html5Widgets</code>.  If you would like, you can 
+			force <code>html5Widgets</code> to render the calendars even if there
+			is a native <code>datetime</code> implementation.  Visit 
+			<a href="dateTime-forcePolyfill.html">this 
+			example to see how it works</a> and why you may want to consider this
+			option.</p>
+			
+			<p><a href="http://www.useragentman.com/blog/?p=1110">Back to User Agent Man HTML5 Forms article.</a></p>
     	</div>
 		
         <form method="get" action="http://www.useragentman.com/testForm.php">
