--- a/tests/html5Forms/dateTime.html
+++ b/tests/html5Forms/dateTime.html
@@ -36,7 +36,7 @@
 			that renders the calendars natively - all the other browsers
 			require <code>html5Widgets</code>.  If you would like, you can 
 			force <code>html5Widgets</code> to render the calendars even if there
-			is a native <code>datetime</code> implementation.  Visit 
+			is a native <code>date</code> implementation.  Visit 
 			<a href="dateTime-forcePolyfill.html">this 
 			example to see how it works</a> and why you may want to consider this
 			option.</p>
