--- a/tests/html5Forms/index.html
+++ b/tests/html5Forms/index.html
@@ -19,8 +19,10 @@
 					<li><a href="autofocus.html"><code>autofocus</code> example</a></li>
 					<li><a href="placeholder.html"><code>placeholder</code> example</a></li>
 					<li><a href="range.html"><code>range</code> example</a></li>
-					<li><a href="datetime.html">the various <code>date</code> related widgets</a></li>
-						<li><a href="outputWithOninput.html"><code>output</code> tag with <code>oninput</code> event</a></li>
+					<li><a href="datetime.html">the various <code>date</code> related widgets</a>.  Note that because of the
+						huge difference between WebKit's date-picker implementation, it is possible to 
+						<a href="datetime-forceJSCalendar.html">force the JavaScript date picker instead of the native one</a>.</li>
+					<li><a href="outputWithOninput.html"><code>output</code> tag with <code>oninput</code> event</a></li>
 					<li><a href="color.html"><code>color</code> example</a></li>
 					<li><a href="errorMessageStyling.html">Error message styling example.</a></li>
 					<li><a href="validityStyling.html">Styling of the validation state of a form field</a> (i.e. <code>:on_valid</code>, <code>:on_invalid</code>)</li>
