Fixed examples and validation polyfill stylesheet to be mobile friendly.

--- a/shared/js/jscalendar-1.0/index.html
+++ b/shared/js/jscalendar-1.0/index.html
@@ -6,6 +6,7 @@
 <head>
 <meta http-equiv="content-type" content="text/xml; charset=utf-8" />
 <title>The Coolest DHTML Calendar - Online Demo</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <link rel="stylesheet" type="text/css" media="all" href="skins/aqua/theme.css" title="Aqua" />
 <link rel="alternate stylesheet" type="text/css" media="all" href="skins/tiger/theme.css" title="Tiger" />
 <link rel="alternate stylesheet" type="text/css" media="all" href="calendar-blue.css" title="winter" />
