--- a/shared/js/jscalendar-1.0/multiple-dates.html
+++ b/shared/js/jscalendar-1.0/multiple-dates.html
@@ -1,6 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>Sample for the multiple dates feature</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <!-- calendar stylesheet -->
   <link rel="stylesheet" type="text/css" media="all" href="calendar-win2k-cold-1.css" title="win2k-cold-1" />
 
