--- a/shared/js/jscalendar-1.0/release-notes.html
+++ b/shared/js/jscalendar-1.0/release-notes.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>jscalendar release notes</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     <style type="text/css">
       h1 { border-bottom: 1px solid #000; }
