--- a/shared/js/jscalendar-1.0/test-position.html
+++ b/shared/js/jscalendar-1.0/test-position.html
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>JS Calendar (positioning test)</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <script type="text/javascript" src="calendar.js"></script>
     <script type="text/javascript" src="calendar-setup.js"></script>
     <script type="text/javascript" src="lang/calendar-en.js"></script>
