--- a/shared/js/weston.ruter.net/webforms2/proto-validation/wf2-validation-testcases/003.html
+++ b/shared/js/weston.ruter.net/webforms2/proto-validation/wf2-validation-testcases/003.html
@@ -1,6 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title>Test 3</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<script type="text/javascript" src="../wf2-validation.js"></script>
 		<script type="text/javascript" src="prototype.js"></script>
 		<style>
