--- a/shared/js/weston.ruter.net/webforms2/task-queue.html
+++ b/shared/js/weston.ruter.net/webforms2/task-queue.html
@@ -188,6 +188,7 @@
   
   
   <title>Web Forms 2.0 Implementation Task Queue</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta content="Weston Ruter" name="author">
 </head>
 
