--- a/shared/js/weston.ruter.net/webforms2/testsuite/015.html
+++ b/shared/js/weston.ruter.net/webforms2/testsuite/015.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 		<title>Test Case 15: Required Elements in Repeated Blocks &laquo; Web Forms 2.0 Test Suite</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<meta name="author" content="Weston Ruter">
 		<meta name="description" content="">
 		<script type="text/javascript" src="../webforms2-p.js"></script>
