--- a/tests/html5Forms/miketaylr.com/index.html
+++ b/tests/html5Forms/miketaylr.com/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title>Web Forms 2.0 test page</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link rel="stylesheet" href="/css/core.css" />
   <style>
     label {width:100px;text-align:right;display:inline;}
