--- a/tests/html5Forms/patternRequiredWithVisibleIf.html
+++ b/tests/html5Forms/patternRequiredWithVisibleIf.html
@@ -8,6 +8,7 @@
 		
 		
 		<title>HTML5 pattern and required Attribute Test With VisibleIf</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		
 		<!-- Needed for visibleIf -->
 		<script type="text/javascript" src="../../shared/js/EventHelpers.js"></script>
