--- a/shared/js/autocomplete/index.html
+++ b/shared/js/autocomplete/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 		<title>Untitled Document</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<!-- <script type="text/javascript" src="../../shared/js/jslog.js"></script> -->
 		<script type="text/javascript" src="../../shared/js/helpers.js"></script>
 		<script type="text/javascript" src="../../shared/js/config.js"></script>
