--- a/shared/js/autocomplete/turnOffInExplorer/index.html
+++ b/shared/js/autocomplete/turnOffInExplorer/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 		<title>Untitled Document</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	</head>
 	<body>
 		
