--- a/shared/js/jscalendar-1.0/altblue.html
+++ b/shared/js/jscalendar-1.0/altblue.html
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>calendar test</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link type="text/css" rel="stylesheet" href="calendar-system.css" />
     <script type="text/javascript" src="calendar.js"></script>
     <script type="text/javascript" src="lang/calendar-en.js" ></script>
