--- a/shared/js/jscalendar-1.0/bugtest-hidden-selects.html
+++ b/shared/js/jscalendar-1.0/bugtest-hidden-selects.html
@@ -2,6 +2,7 @@
 
 <head>
 <title>Bug</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <link rel="stylesheet" type="text/css" media="all" href="calendar-win2k-1.css" title="win2k-1" />
 
 <!-- import the calendar script -->
