--- a/shared/js/jscalendar-1.0/simple-1.html
+++ b/shared/js/jscalendar-1.0/simple-1.html
@@ -4,6 +4,7 @@
 <meta http-equiv="content-type" content="text/xml; charset=utf-8" />
 
 <title>Simple calendar setups [popup calendar]</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
   <!-- calendar stylesheet -->
   <link rel="stylesheet" type="text/css" media="all" href="calendar-win2k-cold-1.css" title="win2k-cold-1" />
