--- a/shared/js/jscolor/demo.html
+++ b/shared/js/jscolor/demo.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<title>jscolor demo</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 </head>
 <body>
 
