--- a/shared/js/weston.ruter.net/webforms2/proto-validation/wf2-validation-testcases/001.html
+++ b/shared/js/weston.ruter.net/webforms2/proto-validation/wf2-validation-testcases/001.html
@@ -3,6 +3,7 @@
 <html>
  <head>
   <title>Test Page</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   
   
   <script language="javascript" src="../../../Common/JavaScript/prototype.js"></script>
