--- a/shared/js/weston.ruter.net/webforms2/testsuite/index.html
+++ b/shared/js/weston.ruter.net/webforms2/testsuite/index.html
@@ -4,6 +4,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 		<meta name="author" content="Weston Ruter">
 		<title>Web Forms 2.0 Test Suite</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	</head>
 	<body>
 		<h1>Web Forms 2.0 Test Suite</h1>
