--- a/shared/js/weston.ruter.net/webforms2/testsuite/~testcases/002.html
+++ b/shared/js/weston.ruter.net/webforms2/testsuite/~testcases/002.html
@@ -2,6 +2,7 @@
 <html debug="true">
 	<head>
 		<title>Spec Example: Repeated rows</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<meta name="keywords" content="repetition" />
 		<meta name="description" content="Dynamically adding table rows" />
 		<meta name="description" content="" />
