--- a/shared/js/weston.ruter.net/webforms2/testsuite/~testcases/003.html
+++ b/shared/js/weston.ruter.net/webforms2/testsuite/~testcases/003.html
@@ -2,6 +2,7 @@
 <html debug="true">
 	<head>
 		<title>Spec Example: Solar system</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<meta name="description" content="Nesting repetition elements two levels deep" />
 		<meta name="keywords" content="repetition" />
 		<script type="text/javascript" src="../../webforms2_src.js"></script>
