--- a/shared/js/weston.ruter.net/webforms2/testsuite/~testcases/005.html
+++ b/shared/js/weston.ruter.net/webforms2/testsuite/~testcases/005.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title>Repetition Index in Attributes</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<meta name="keywords" content="repetition" />
 		<meta name="description" content="Replacing template name block's current repetition index in all attributes" />
 		<script type="text/javascript" src="../../webforms2_src.js"></script>
