--- a/shared/js/weston.ruter.net/webforms2/testsuite/~testcases/007.html
+++ b/shared/js/weston.ruter.net/webforms2/testsuite/~testcases/007.html
@@ -1,6 +1,7 @@
 ﻿<html debug="true" xmlns="http://www.w3.org/1999/xhtml"><!-- debug -->
 	<head>
 		<title>Repetition Event Handler Attributes</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<meta name="keywords" content="repetition" />
 		<meta name="description" content="Demonstrating the use of the onadd, onremove, and onmove attribute handler extensions" />
 		<script type="text/javascript" src="../../webforms2_src.js"></script>
