--- a/shared/js/weston.ruter.net/webforms2/testsuite/~testcases/012.html
+++ b/shared/js/weston.ruter.net/webforms2/testsuite/~testcases/012.html
@@ -1,6 +1,7 @@
 ﻿<html debug="true" xmlns="http://www.w3.org/1999/xhtml"><!-- debug -->
 	<head>
 		<title>repeat-min, repeat-max, and repeat-start attributes</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="repetition" />
 		<script type="text/javascript" src="../../webforms2_src.js"></script>
