--- a/shared/js/weston.ruter.net/webforms2/testsuite/~testcases/018.html
+++ b/shared/js/weston.ruter.net/webforms2/testsuite/~testcases/018.html
@@ -2,6 +2,7 @@
 <html debug="true" xmlns="http://www.w3.org/1999/xhtml"><!-- debug -->
 	<head>
 		<title>Input Controls in Nested Repetition Blocks</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="repetition, validation" />
 		<script type="text/javascript" src="../../webforms2_src.js"></script>
