--- a/shared/js/weston.ruter.net/webforms2/testsuite/~testcases/020.html
+++ b/shared/js/weston.ruter.net/webforms2/testsuite/~testcases/020.html
@@ -2,6 +2,7 @@
 <html debug="true">
 	<head>
 		<title>Creating Repetition Templates Dynamically</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<script type="text/javascript" src="../../webforms2_src.js"></script>
