--- a/tests/html5Forms/24ways.org/index.html
+++ b/tests/html5Forms/24ways.org/index.html
@@ -7,6 +7,7 @@
 		<meta charset=utf-8 />
 		
 		<title>Form | 24ways.org</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		
 		<link rel=stylesheet href=style.css type=text/css>
 		
