--- a/tests/html5Forms/example.html
+++ b/tests/html5Forms/example.html
@@ -6,6 +6,7 @@
         "text/html; utf-8">
 
         <title>html5Widgets Test Form</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		
 		<!-- This CSS file is not necessary to use html5Widgets -->
 		<link type="text/css" rel="stylesheet" href="../../shared/css/useragentmanExample.css">
