--- a/tests/html5Forms/index.html
+++ b/tests/html5Forms/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>HTML5Forms.js Test Cases</title>
-		<link rel="stylesheet" href="../../shared/css/useragentmanExample.css" type="text/css" media="all" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+		<link rel="stylesheet" href="useragentmanExample.css" type="text/css" media="all" />
     </head>
     <body id="myExample">
         <fieldset>
