--- a/tests/html5Forms/outputWithBothOnforminputAndOninput.html
+++ b/tests/html5Forms/outputWithBothOnforminputAndOninput.html
@@ -4,6 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		
 		<title>Example of the output tag.</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		
 		<!-- This CSS file is not necessary to use html5Widgets -->
 		<link type="text/css" rel="stylesheet" href="../../shared/css/useragentmanExample.css">
