--- a/tests/html5Forms/range.html
+++ b/tests/html5Forms/range.html
@@ -7,6 +7,7 @@
 		
 		
 		<title>HTML5 range input type</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		
 		
 		
