--- a/tests/html5Forms/validityStyling.html
+++ b/tests/html5Forms/validityStyling.html
@@ -18,6 +18,7 @@
 		
 		
 		<title>HTML5 placeholder Attribute Test</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		
 		
 		
